--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <!-- HEADER -->
 <header>
     <div class="logo">
-        <img src="pure calves 1/logo.jfif" alt="Farm Logo">
+        <img src="logo.jfif" alt="Farm Logo">
     </div>
     DELAMERE DAIRY FARM
 </header>
@@ -271,62 +271,62 @@
         <div class="gallery">
 
             <div class="gallery-box">
-                <img src="pure calves 1/pu1.jfif">
+                <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k <br>4 to 7 months</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/rigisterd doper.jfif">
+                <img src="rigisterd doper.jfif">
                 <h4>Registered Dorper</h4>
                 <div class="price-tag">KSh 6k–10k <br>3 to 5 months</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/second calving.jfif">
+                <img src="second calving.jfif">
                 <h4>Second Calving (Incalf)</h4>
                 <div class="price-tag">KSh 165k–245k <br>7.5 months incalf</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/every farmers dream goat.jfif">
+                <img src="every farmers dream goat.jfif">
                 <h4>Farmers’ Dream Goat</h4>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/registerd dopper 11.jfif">
+                <img src="registerd dopper 11.jfif">
                 <h4>Registered Dorper Ram</h4>
                 <div class="price-tag">KSh 10k–50k <br>Ready to serve</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/second calving freshian.jfif">
+                <img src="second calving freshian.jfif">
                 <h4>Fresian High Yielders</h4>
                 <div class="price-tag">KSh 167k–230k <br>Second calving</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/second calving.jfif">
+                <img src="second calving.jfif">
                 <h4>Incalf Heifers</h4>
                 <div class="price-tag">KSh 89k–175k <br>23–29 Ltrs</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/incalf 2.jfif">
+                <img src="incalf 2.jfif">
                 <h4>Incalf Heifer (3–7.5 months)</h4>
                 <div class="price-tag">KSh 89k–175k <br>23–29 Ltrs</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/incalf 1.jfif">
+                <img src="incalf 1.jfif">
                 <h4>Incalf Heifer (3–7.5 months)</h4>
                 <div class="price-tag">KSh 89k–175k <br>23–29 Ltrs</div>
                 <a href="#" class="buy-btn">Buy Now</a>
@@ -362,3 +362,4 @@
 
 </body>
 </html>
+
