--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="logo">
         <img src="logo.jfif" alt="Farm Logo">
     </div>
-    DELAMERE DAIRY FARM
+   <h1> DELAMERE DAIRY FARM</h1>
 </header>
 
 <!-- SUBHEADER -->
@@ -362,4 +362,5 @@
 
 </body>
 </html>
+
 
