--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="gallery">
 
             <div class="gallery-box">
-                <img src="pure calves 1/pu1.jfif">
+                <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k • 4–7 months</div>
                 <a href="#" class="buy-btn">Buy Now</a>
@@ -342,4 +342,5 @@
 
 </body>
 </html>
+
 
