--- a/index.html
+++ b/index.html
@@ -8,241 +8,241 @@
     <link rel="icon" type="image/png" href="your-logo.png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
-   
-    <style>
-    /* GENERAL */
-    body {
-        font-family: "Segoe UI", Arial, sans-serif;
-        margin: 0;
-        background: #f3f5f1;
-        color: #2e332d;
-        font-size: 20px;
-        overflow-x: hidden;
+
+<style>
+/* GENERAL */
+body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    margin: 0;
+    background: #f3f5f1;
+    color: #2e332d;
+    font-size: 20px;
+    overflow-x: hidden;
+}
+
+:root {
+    --primary: #2f5f3b;
+    --primary-light: #3f7a4e;
+    --background-light: #ffffff;
+    --card-bg: #ffffff;
+    --border: #d4d9d2;
+}
+
+/* HEADER */
+header {
+    position: sticky;
+    top: 0;
+    background: rgba(47, 95, 59, 0.97);
+    width: 100%;
+    z-index: 1200;
+    padding: 12px 0;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.25);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    width: 100%;
+    max-width: 1100px;
+    padding: 0 20px;
+}
+
+.header-logo img {
+    width: 75px;
+    height: 75px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.header-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    line-height: 1.1;
+}
+
+.header-text h1 {
+    font-size: 34px;
+    color: #fff;
+    margin: 0;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+
+.header-text p {
+    margin: 5px 0 0 0;
+    color: #e7ffe7;
+    font-size: 18px;
+}
+
+/* SUBHEADER */
+.subheader {
+    position: sticky;
+    top: 108px;
+    width: 100%;
+    background: var(--primary-light);
+    color: #fff;
+    text-align: center;
+    padding: 12px 0;
+    font-size: 20px;
+    z-index: 999;
+}
+
+/* CONTENT */
+.container {
+    width: 92%;
+    max-width: 1100px;
+    margin: auto;
+    padding-top: 50px;
+    overflow: hidden;
+}
+
+h2, h4 {
+    font-size: 32px;
+    color: var(--primary);
+    font-weight: 700;
+    margin-top: 0;
+}
+
+p, li {
+    font-size: 21px;
+    line-height: 1.7;
+}
+
+.section {
+    background: var(--card-bg);
+    border: 1px solid var(--border);
+    border-radius: 12px;
+    padding: 30px;
+    margin-bottom: 35px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+/* GALLERY */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 22px;
+    overflow: hidden;
+}
+
+.gallery-box {
+    background: var(--background-light);
+    border-radius: 12px;
+    padding: 20px;
+    border: 1px solid var(--border);
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+    overflow: hidden;
+}
+
+/* ⭐ BIGGER IMAGES ⭐ */
+.gallery-box img {
+    width: 100%;
+    height: 380px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+/* PRICE & BUTTON */
+.price-tag {
+    font-size: 22px;
+    font-weight: bold;
+    color: #2f5f3b;
+    margin: 12px 0;
+}
+
+.buy-btn {
+    background: var(--primary);
+    color: #fff;
+    padding: 14px 32px;
+    border-radius: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.buy-btn:hover {
+    background: var(--primary-light);
+}
+
+/* FOOTER */
+footer {
+    background: var(--primary);
+    color: #fff;
+    text-align: center;
+    padding: 30px 20px;
+    margin-top: 40px;
+}
+
+footer p i {
+    margin-right: 8px;
+}
+
+/* FLOAT BUTTONS */
+.whatsapp-float, .call-float {
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    right: 25px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+    z-index: 1001;
+}
+
+.whatsapp-float {
+    bottom: 25px;
+    background: #25D366;
+}
+
+.whatsapp-float img {
+    width: 48px;
+}
+
+.call-float {
+    bottom: 110px;
+    background: #2f5f3b;
+    color: white;
+    font-size: 46px;
+}
+
+/* MOBILE OPTIMIZATION */
+@media (max-width: 600px) {
+    .gallery {
+        grid-template-columns: 1fr;
     }
 
-    :root {
-        --primary: #2f5f3b;
-        --primary-light: #3f7a4e;
-        --background-light: #ffffff;
-        --card-bg: #ffffff;
-        --border: #d4d9d2;
-    }
-
-    /* HEADER */
-    header {
-        position: sticky;
-        top: 0;
-        background: rgba(47, 95, 59, 0.97);
-        width: 100%;
-        z-index: 1200;
-        padding: 12px 0;
-        box-shadow: 0 3px 10px rgba(0,0,0,0.25);
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .header-content {
-        display: flex;
-        align-items: center;
-        gap: 18px;
-        width: 100%;
-        max-width: 1100px;
-        padding: 0 20px;
-    }
-
-    .header-logo img {
-        width: 75px;
-        height: 75px;
-        border-radius: 10px;
-        object-fit: cover;
-    }
-
-    .header-text {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        line-height: 1.1;
+    .gallery-box img {
+        height: 300px;
     }
 
     .header-text h1 {
-        font-size: 34px;
-        color: #fff;
-        margin: 0;
-        letter-spacing: 1px;
-        font-weight: 700;
+        font-size: 22px;
     }
 
     .header-text p {
-        margin: 5px 0 0 0;
-        color: #e7ffe7;
-        font-size: 18px;
+        font-size: 14px;
     }
 
-    /* SUBHEADER */
+    .header-logo img {
+        width: 55px;
+        height: 55px;
+    }
+
     .subheader {
-        position: sticky;
-        top: 108px;
-        width: 100%;
-        background: var(--primary-light);
-        color: #fff;
-        text-align: center;
-        padding: 12px 0;
-        font-size: 20px;
-        z-index: 999;
+        font-size: 14px;
+        padding: 8px;
     }
-
-    /* CONTENT */
-    .container {
-        width: 92%;
-        max-width: 1100px;
-        margin: auto;
-        padding-top: 50px;
-        overflow: hidden;
-    }
-
-    h2, h4 {
-        font-size: 32px;
-        color: var(--primary);
-        font-weight: 700;
-        margin-top: 0;
-    }
-
-    p, li {
-        font-size: 21px;
-        line-height: 1.7;
-    }
-
-    .section {
-        background: var(--card-bg);
-        border: 1px solid var(--border);
-        border-radius: 12px;
-        padding: 30px;
-        margin-bottom: 35px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-
-    /* GALLERY */
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 22px;
-        overflow: hidden;
-    }
-
-    .gallery-box {
-        background: var(--background-light);
-        border-radius: 12px;
-        padding: 20px;
-        border: 1px solid var(--border);
-        text-align: center;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.12);
-        overflow: hidden;
-    }
-
-    /* ⭐ BIGGER IMAGES ⭐ */
-    .gallery-box img {
-        width: 100%;
-        height: 380px;   /* increased from 260px */
-        object-fit: cover;
-        border-radius: 12px;
-    }
-
-    /* PRICE & BUTTON */
-    .price-tag {
-        font-size: 22px;
-        font-weight: bold;
-        color: #2f5f3b;
-        margin: 12px 0;
-    }
-
-    .buy-btn {
-        background: var(--primary);
-        color: #fff;
-        padding: 14px 32px;
-        border-radius: 10px;
-        font-size: 20px;
-        text-decoration: none;
-        display: inline-block;
-        font-weight: 600;
-    }
-
-    .buy-btn:hover {
-        background: var(--primary-light);
-    }
-
-    /* FOOTER */
-    footer {
-        background: var(--primary);
-        color: #fff;
-        text-align: center;
-        padding: 30px 20px;
-        margin-top: 40px;
-    }
-
-    footer p i {
-        margin-right: 8px;
-    }
-
-    /* FLOAT BUTTONS */
-    .whatsapp-float, .call-float {
-        position: fixed;
-        width: 70px;
-        height: 70px;
-        right: 25px;
-        border-radius: 15px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
-        z-index: 1001;
-    }
-
-    .whatsapp-float {
-        bottom: 25px;
-        background: #25D366;
-    }
-
-    .whatsapp-float img {
-        width: 48px;
-    }
-
-    .call-float {
-        bottom: 110px;
-        background: #2f5f3b;
-        color: white;
-        font-size: 46px;
-    }
-
-    /* MOBILE OPTIMIZATION */
-    @media (max-width: 600px) {
-        .gallery {
-            grid-template-columns: 1fr;
-        }
-
-        .gallery-box img {
-            height: 300px;
-        }
-
-        .header-text h1 {
-            font-size: 22px;
-        }
-
-        .header-text p {
-            font-size: 14px;
-        }
-
-        .header-logo img {
-            width: 55px;
-            height: 55px;
-        }
-
-        .subheader {
-            font-size: 14px;
-            padding: 8px;
-        }
-    }
+}
 </style>
 
 </head>
@@ -296,38 +296,39 @@
 
         <div class="gallery">
 
+            <!-- ALL BUY BUTTONS NOW HAVE WHATSAPP LINKS -->
             <div class="gallery-box">
                 <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k • 4–7 months</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Pure%20Calves." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="rigisterd doper.jfif">
                 <h4>Registered Dorper</h4>
                 <div class="price-tag">KSh 6k–10k • 3–5 months</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Registered%20Dorper%20Lambs." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="second calving.jfif">
                 <h4>Second Calving (Incalf)</h4>
                 <div class="price-tag">KSh 165k–245k • 7.5 months incalf</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20details%20on%20the%20Second%20Calving%20Fresian%20Cow." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="every farmers dream goat.jfif">
                 <h4>Farmer’s Dream Goat</h4>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I%20want%20to%20inquire%20about%20the%20Farmer's%20Dream%20Goat." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="registerd dopper 11.jfif">
                 <h4>Registered Dorper Ram</h4>
                 <div class="price-tag">KSh 10k–50k • Ready to serve</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
         </div>
@@ -358,7 +359,3 @@
 
 </body>
 </html>
-
-
-
-
