--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@ footer p i {
             </div>
 
               <div class="gallery-box">
-                  <img src="kalhari goat">
-                <h4>Kalahari red goats</h4>>
+                  <img src="kalhari goat.jfif">
+                <h4>Kalahari red goats</h4>
                 <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
@@ -437,6 +437,7 @@ footer p i {
 
 </body>
 </html>
+
 
 
 
