--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <header>
     <div class="header-content">
         <div class="header-logo">
-            <img src="pure calves 1/logo.jfif" alt="Farm Logo">
+            <img src="logo.jfif" alt="Farm Logo">
         </div>
 
         <div class="header-text">
@@ -281,34 +281,34 @@
         <div class="gallery">
 
             <div class="gallery-box">
-                <img src="pure calves 1/pu1.jfif">
+                <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k • 4–7 months</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/rigisterd doper.jfif">
+                <img src="rigisterd doper.jfif">
                 <h4>Registered Dorper</h4>
                 <div class="price-tag">KSh 6k–10k • 3–5 months</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/second calving.jfif">
+                <img src="second calving.jfif">
                 <h4>Second Calving (Incalf)</h4>
                 <div class="price-tag">KSh 165k–245k • 7.5 months incalf</div>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/every farmers dream goat.jfif">
+                <img src="every farmers dream goat.jfif">
                 <h4>Farmer’s Dream Goat</h4>
                 <a href="#" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
-                <img src="pure calves 1/registerd dopper 11.jfif">
+                <img src="registerd dopper 11.jfif">
                 <h4>Registered Dorper Ram</h4>
                 <div class="price-tag">KSh 10k–50k • Ready to serve</div>
                 <a href="#" class="buy-btn">Buy Now</a>
@@ -342,4 +342,5 @@
 
 </body>
 </html>
+
 
