--- a/index.html
+++ b/index.html
@@ -9,225 +9,261 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
     <style>
-        /* GENERAL */
-        body {
-            font-family: "Segoe UI", Arial, sans-serif;
-            margin: 0;
-            background: #f3f5f1;
-            color: #2e332d;
-            font-size: 20px;
-        }
+       /* ===============================
+   GLOBAL THEME COLORS
+================================ */
+:root {
+    --primary: #3b5f34;           /* deep farm green */
+    --primary-light: #517f47;     /* lighter fresh green */
+    --accent: #8a5a3b;            /* warm brown */
+    --text-dark: #2c2c2c;         /* dark readable text */
+    --background: #f6f5ef;        /* cream farm background */
+    --white: #ffffff;
+    --border: #d9dfd4;
+}
 
-        :root {
-            --primary: #2f5f3b;
-            --primary-light: #3f7a4e;
-            --background-light: #ffffff;
-            --card-bg: #ffffff;
-            --border: #d4d9d2;
-        }
+/* ===============================
+   BASE STYLE
+================================ */
+body {
+    margin: 0;
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: var(--background);
+    color: var(--text-dark);
+    font-size: 20px;
+    overflow-x: hidden;
+}
 
-        /* ⭐ NEW MODERN HEADER STYLE ⭐ */
-        header {
-            position: sticky;
-            top: 0;
-            background: rgba(47, 95, 59, 0.97);
-            width: 100%;
-            z-index: 1200;
-            padding: 12px 0;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.25);
+/* ===============================
+   HEADER SECTION
+================================ */
+header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background: var(--primary);
+    padding: 14px 0;
+    z-index: 1200;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.25);
+}
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+.header-content {
+    max-width: 1200px;
+    width: 92%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
 
-        /* Header inner container */
-        .header-content {
-            display: flex;
-            align-items: center;
-            gap: 18px;
-            width: 100%;
-            max-width: 1100px;
-            padding: 0 20px;
-        }
+.header-logo img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 12px;
+    border: 3px solid var(--white);
+}
 
-        /* Logo */
-        .header-logo img {
-            width: 75px;
-            height: 75px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
+.header-text h1 {
+    margin: 0;
+    font-size: 36px;
+    color: #fff;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
 
-        /* Text block */
-        .header-text {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            line-height: 1.1;
-        }
+.header-text p {
+    margin: 4px 0 0 0;
+    color: #e7ffe7;
+    font-size: 18px;
+}
 
-        .header-text h1 {
-            font-size: 34px;
-            color: #fff;
-            margin: 0;
-            letter-spacing: 1px;
-        }
+/* ===============================
+   SUB HEADER
+================================ */
+.subheader {
+    background: var(--primary-light);
+    text-align: center;
+    color: #fff;
+    padding: 12px 0;
+    font-size: 20px;
+    position: sticky;
+    top: 100px;
+    z-index: 1100;
+}
 
-        .header-text p {
-            margin: 5px 0 0 0;
-            color: #e7ffe7;
-            font-size: 18px;
-        }
+/* ===============================
+   CONTENT WRAPPER
+================================ */
+.container {
+    max-width: 1100px;
+    width: 92%;
+    margin: auto;
+    padding-top: 45px;
+}
 
-        /* SUBHEADER */
-        .subheader {
-            position: sticky;
-            top: 108px;
-            width: 100%;
-            background: var(--primary-light);
-            color: #fff;
-            text-align: center;
-            padding: 12px 0;
-            font-size: 20px;
-            z-index: 999;
-        }
+h2, h4 {
+    color: var(--primary);
+    font-weight: 700;
+    font-size: 32px;
+}
 
-        /* CONTENT */
-        .container {
-            width: 92%;
-            max-width: 1100px;
-            margin: auto;
-            padding-top: 50px;
-        }
+p, li {
+    font-size: 21px;
+    line-height: 1.7;
+}
 
-        h2, h4 {
-            font-size: 32px;
-            color: var(--primary);
-            font-weight: 700;
-        }
+/* ===============================
+   SECTION BOX
+================================ */
+.section {
+    background: var(--white);
+    border-radius: 14px;
+    padding: 32px;
+    margin-bottom: 38px;
+    border: 1px solid var(--border);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
 
-        p, li {
-            font-size: 21px;
-            line-height: 1.7;
-        }
+/* ===============================
+   LIVESTOCK GALLERY
+================================ */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 22px;
+}
 
-        .section {
-            background: var(--card-bg);
-            border: 1px solid var(--border);
-            border-radius: 12px;
-            padding: 30px;
-            margin-bottom: 35px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
+.gallery-box {
+    background: var(--white);
+    border-radius: 14px;
+    padding: 20px;
+    border: 1px solid var(--border);
+    text-align: center;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    transition: transform 0.25s ease;
+}
 
-        /* GALLERY */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 22px;
-        }
+.gallery-box:hover {
+    transform: translateY(-6px);
+}
 
-        .gallery-box {
-            background: var(--background-light);
-            border-radius: 12px;
-            padding: 20px;
-            border: 1px solid var(--border);
-            text-align: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.12);
-        }
+.gallery-box img {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 12px;
+}
 
-        .gallery-box img {
-            width: 100%;
-            height: 260px;
-            object-fit: cover;
-            border-radius: 12px;
-        }
+/* ===============================
+   BUTTONS
+================================ */
+.buy-btn {
+    background: var(--primary);
+    color: #fff;
+    padding: 14px 32px;
+    border-radius: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: 600;
+    display: inline-block;
+    margin-top: 12px;
+    transition: 0.25s ease;
+}
 
-        .price-tag {
-            font-size: 22px;
-            font-weight: bold;
-            color: #2f5f3b;
-            margin: 10px 0;
-        }
+.buy-btn:hover {
+    background: var(--primary-light);
+}
 
-        .buy-btn {
-            background: var(--primary);
-            color: #fff;
-            padding: 12px 28px;
-            border-radius: 10px;
-            font-size: 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
+/* ===============================
+   FLOATING CONTACT BUTTONS
+================================ */
+.whatsapp-float, .call-float {
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    right: 25px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1001;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+}
 
-        .buy-btn:hover {
-            background: var(--primary-light);
-        }
+.whatsapp-float {
+    bottom: 25px;
+    background: #25D366;
+}
 
-        /* FOOTER */
-        footer {
-            background: var(--primary);
-            color: #fff;
-            text-align: center;
-            padding: 30px 20px;
-            margin-top: 40px;
-        }
+.whatsapp-float img {
+    width: 50px;
+}
 
-        footer p i {
-            margin-right: 8px;
-        }
+.call-float {
+    bottom: 110px;
+    background: var(--primary);
+    color: white;
+    font-size: 42px;
+    font-weight: bold;
+}
 
-        /* FLOAT BUTTONS */
-        .whatsapp-float, .call-float {
-            position: fixed;
-            width: 70px;
-            height: 70px;
-            right: 25px;
-            border-radius: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
-            z-index: 1001;
-        }
+/* ===============================
+   FOOTER
+================================ */
+footer {
+    background: var(--primary);
+    color: #fff;
+    text-align: center;
+    padding: 36px 20px;
+    margin-top: 50px;
+}
 
-        .whatsapp-float {
-            bottom: 25px;
-            background: #25D366;
-        }
+footer h2 {
+    font-size: 28px;
+    margin-bottom: 18px;
+}
 
-        .whatsapp-float img {
-            width: 48px;
-        }
+footer p {
+    font-size: 20px;
+    margin: 8px 0;
+}
 
-        .call-float {
-            bottom: 110px;
-            background: #2f5f3b;
-            color: white;
-            font-size: 46px;
-        }
+footer p i {
+    margin-right: 10px;
+}
 
-        /* MOBILE OPTIMIZATION */
-        @media (max-width: 480px) {
-            .header-text h1 {
-                font-size: 22px;
-            }
+/* ===============================
+   MOBILE RESPONSIVENESS
+================================ */
+@media (max-width: 600px) {
+    .header-logo img {
+        width: 60px;
+        height: 60px;
+    }
 
-            .header-text p {
-                font-size: 14px;
-            }
+    .header-text h1 {
+        font-size: 24px;
+    }
 
-            .header-logo img {
-                width: 55px;
-                height: 55px;
-            }
+    .header-text p {
+        font-size: 14px;
+    }
 
-            .subheader {
-                font-size: 14px;
-                padding: 8px;
-            }
-        }
+    .gallery {
+        grid-template-columns: 1fr;
+    }
+
+    .gallery-box img {
+        height: 300px;
+    }
+
+    .subheader {
+        font-size: 16px;
+        padding: 8px;
+    }
+}
+
     </style>
 </head>
 
@@ -342,5 +378,6 @@
 
 </body>
 </html>
+
 
 
