--- a/index.html
+++ b/index.html
@@ -8,104 +8,106 @@
     <link rel="icon" type="image/png" href="your-logo.png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
-    <style>
-       /* ===============================
-   GLOBAL THEME COLORS
-================================ */
-:root {
-    --primary: #3b5f34;           /* deep farm green */
-    --primary-light: #517f47;     /* lighter fresh green */
-    --accent: #8a5a3b;            /* warm brown */
-    --text-dark: #2c2c2c;         /* dark readable text */
-    --background: #f6f5ef;        /* cream farm background */
-    --white: #ffffff;
-    --border: #d9dfd4;
-}
 
-/* ===============================
-   BASE STYLE
-================================ */
+<style>
+/* GENERAL */
 body {
-    margin: 0;
     font-family: "Segoe UI", Arial, sans-serif;
-    background: var(--background);
-    color: var(--text-dark);
+    margin: 0;
+    background: #f3f5f1;
+    color: #2e332d;
     font-size: 20px;
+    font-size: 22px;
     overflow-x: hidden;
 }
 
-/* ===============================
-   HEADER SECTION
-================================ */
+:root {
+    --primary: #2f5f3b;
+    --primary-light: #3f7a4e;
+    --background-light: #ffffff;
+    --card-bg: #ffffff;
+    --border: #d4d9d2;
+}
+
+/* HEADER */
 header {
     position: sticky;
     top: 0;
+    background: rgba(47, 95, 59, 0.97);
     width: 100%;
-    background: var(--primary);
-    padding: 14px 0;
     z-index: 1200;
+    padding: 12px 0;
     box-shadow: 0 3px 10px rgba(0,0,0,0.25);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header-content {
-    max-width: 1200px;
-    width: 92%;
-    margin: auto;
     display: flex;
     align-items: center;
     gap: 18px;
+    width: 100%;
+    max-width: 1100px;
+    padding: 0 20px;
 }
 
 .header-logo img {
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
+    border-radius: 10px;
     object-fit: cover;
-    border-radius: 12px;
-    border: 3px solid var(--white);
+}
+
+.header-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    line-height: 1.1;
 }
 
 .header-text h1 {
-    margin: 0;
-    font-size: 36px;
+    font-size: 34px;
     color: #fff;
+    margin: 0;
     letter-spacing: 1px;
     font-weight: 700;
 }
 
 .header-text p {
-    margin: 4px 0 0 0;
+    margin: 5px 0 0 0;
     color: #e7ffe7;
     font-size: 18px;
 }
 
-/* ===============================
-   SUB HEADER
-================================ */
+/* SUBHEADER */
 .subheader {
+    position: sticky;
+    top: 108px;
+    width: 100%;
     background: var(--primary-light);
-    text-align: center;
     color: #fff;
+    text-align: center;
     padding: 12px 0;
     font-size: 20px;
-    position: sticky;
-    top: 100px;
-    z-index: 1100;
+    z-index: 999;
 }
 
-/* ===============================
-   CONTENT WRAPPER
-================================ */
+/* CONTENT */
 .container {
-    max-width: 1100px;
     width: 92%;
+    max-width: 1100px;
     margin: auto;
-    padding-top: 45px;
+    padding-top: 50px;
+    overflow: hidden;
 }
 
 h2, h4 {
+    font-size: 32px;
     color: var(--primary);
     font-weight: 700;
-    font-size: 32px;
+    margin-top: 0;
 }
 
 p, li {
@@ -113,51 +115,49 @@ p, li {
     line-height: 1.7;
 }
 
-/* ===============================
-   SECTION BOX
-================================ */
 .section {
-    background: var(--white);
-    border-radius: 14px;
-    padding: 32px;
-    margin-bottom: 38px;
+    background: var(--card-bg);
     border: 1px solid var(--border);
+    border-radius: 12px;
+    padding: 30px;
+    margin-bottom: 35px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 }
 
-/* ===============================
-   LIVESTOCK GALLERY
-================================ */
+/* GALLERY */
 .gallery {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 22px;
+    overflow: hidden;
 }
 
 .gallery-box {
-    background: var(--white);
-    border-radius: 14px;
+    background: var(--background-light);
+    border-radius: 12px;
     padding: 20px;
     border: 1px solid var(--border);
     text-align: center;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.12);
-    transition: transform 0.25s ease;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+    overflow: hidden;
 }
 
-.gallery-box:hover {
-    transform: translateY(-6px);
-}
-
+/* ⭐ BIGGER IMAGES ⭐ */
 .gallery-box img {
     width: 100%;
-    height: 360px;
+    height: 380px;
     object-fit: cover;
     border-radius: 12px;
 }
 
-/* ===============================
-   BUTTONS
-================================ */
+/* PRICE & BUTTON */
+.price-tag {
+    font-size: 22px;
+    font-weight: bold;
+    color: #2f5f3b;
+    margin: 12px 0;
+}
+
 .buy-btn {
     background: var(--primary);
     color: #fff;
@@ -165,19 +165,28 @@ p, li {
     border-radius: 10px;
     font-size: 20px;
     text-decoration: none;
-    font-weight: 600;
     display: inline-block;
-    margin-top: 12px;
-    transition: 0.25s ease;
+    font-weight: 600;
 }
 
 .buy-btn:hover {
     background: var(--primary-light);
 }
 
-/* ===============================
-   FLOATING CONTACT BUTTONS
-================================ */
+/* FOOTER */
+footer {
+    background: var(--primary);
+    color: #fff;
+    text-align: center;
+    padding: 30px 20px;
+    margin-top: 40px;
+}
+
+footer p i {
+    margin-right: 8px;
+}
+
+/* FLOAT BUTTONS */
 .whatsapp-float, .call-float {
     position: fixed;
     width: 70px;
@@ -185,10 +194,10 @@ p, li {
     right: 25px;
     border-radius: 15px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    z-index: 1001;
+    align-items: center;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+    z-index: 1001;
 }
 
 .whatsapp-float {
@@ -197,59 +206,18 @@ p, li {
 }
 
 .whatsapp-float img {
-    width: 50px;
+    width: 48px;
 }
 
 .call-float {
     bottom: 110px;
-    background: var(--primary);
+    background: #2f5f3b;
     color: white;
-    font-size: 42px;
-    font-weight: bold;
+    font-size: 46px;
 }
 
-/* ===============================
-   FOOTER
-================================ */
-footer {
-    background: var(--primary);
-    color: #fff;
-    text-align: center;
-    padding: 36px 20px;
-    margin-top: 50px;
-}
-
-footer h2 {
-    font-size: 28px;
-    margin-bottom: 18px;
-}
-
-footer p {
-    font-size: 20px;
-    margin: 8px 0;
-}
-
-footer p i {
-    margin-right: 10px;
-}
-
-/* ===============================
-   MOBILE RESPONSIVENESS
-================================ */
+/* MOBILE OPTIMIZATION */
 @media (max-width: 600px) {
-    .header-logo img {
-        width: 60px;
-        height: 60px;
-    }
-
-    .header-text h1 {
-        font-size: 24px;
-    }
-
-    .header-text p {
-        font-size: 14px;
-    }
-
     .gallery {
         grid-template-columns: 1fr;
     }
@@ -258,13 +226,26 @@ footer p i {
         height: 300px;
     }
 
+    .header-text h1 {
+        font-size: 22px;
+    }
+
+    .header-text p {
+        font-size: 14px;
+    }
+
+    .header-logo img {
+        width: 55px;
+        height: 55px;
+    }
+
     .subheader {
-        font-size: 16px;
+        font-size: 14px;
         padding: 8px;
     }
 }
+</style>
 
-    </style>
 </head>
 
 <body>
@@ -316,38 +297,117 @@ footer p i {
 
         <div class="gallery">
 
+            <!-- ALL BUY BUTTONS NOW HAVE WHATSAPP LINKS -->
             <div class="gallery-box">
                 <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k • 4–7 months</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Pure%20Calves." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="rigisterd doper.jfif">
                 <h4>Registered Dorper</h4>
                 <div class="price-tag">KSh 6k–10k • 3–5 months</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Registered%20Dorper%20Lambs." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="second calving.jfif">
                 <h4>Second Calving (Incalf)</h4>
                 <div class="price-tag">KSh 165k–245k • 7.5 months incalf</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20details%20on%20the%20Second%20Calving%20Fresian%20Cow." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="every farmers dream goat.jfif">
                 <h4>Farmer’s Dream Goat</h4>
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I%20want%20to%20inquire%20about%20the%20Farmer's%20Dream%20Goat." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="registerd dopper 11.jfif">
+                <img src="registerd dopper 12.jfif">
                 <h4>Registered Dorper Ram</h4>
-                <div class="price-tag">KSh 10k–50k • Ready to serve</div>
-                <a href="#" class="buy-btn">Buy Now</a>
+
+
+                <div class="price-tag">Ready to serve rams available 10k-50k</div>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+
+            <div class="gallery-box">
+                <img src="second calving freshian.jfif">
+                <h4>Second Calving</h4>
+                <div class="price-tag">Asking price ksh 165k-230k</div>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+              <div class="gallery-box">
+                <img src="full bl.jfif">
+                  <img src="full bl2.jfif">
+                <h4> FULL BLOOD BOER GOAT DOE</h4>
+                <div class="price-tag">*Boer Goats for Sale. 
+
+<br>- *Kids (3 up to 7 months old):* KSh 7,000
+<br>- *Young Goats (8-11 months old):* KSh 15,000
+<br>- *Sub-adults (12 -16 months old):* KSh 30,000
+</div>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+            <div class="gallery-box">
+                <img src="saanen goat 01.jfif">
+
+                <img src="saanen goat 02.jfif">
+                <h4>SAANEN GOATS</h4>
+                <div class="price-tag">Available from 10k- 35k<br>3 litres to 5 litres per day</div>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+              <div class="gallery-box">
+                <img src="bora1.jfif">
+
+                <img src="bora 02.jfif">
+                  <img src="bora 03.jfif">
+
+                  <img src="bora04.jfif">
+                <h4>BORAN ,SAHIWAL, BRAHMAN</h4>
+                <div class="price-tag">* Calves – From *KSH 25,000 to 35,000<br>
+* Heifers – From *KSH 60,000 to 96,000</div>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+              <div class="gallery-box">
+                  <img src="kalhari goat.jfif">
+                <h4>Kalahari red goats</h4>
+                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+              <div class="gallery-box">
+
+                  <img src="shaaa.jfif">
+                <h4>Sahiwal cows</h4>      <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+<div class="gallery-box">
+
+                  <img src="jassey00.jfif">
+                <h4>Jersey</h4>      <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+            </div>
+
+<div class="gallery-box">
+
+                  <img src="pure lucerne 01.jfif">
+<img src="pure lucerne 02.jfif">
+
+    <h4>Pure bhoma Rhodes hay</h4> 
+              <div class="price-tag">
+<br>-Pure Lucerne alfafa (25kg) bale @400/-farm price!
+<br>-Pure bhoma Rhodes hay(18kg) bale @200/-farm price!
+<br>- Lucerne pellets/seeds @1000/-per kg
+
+<br>-Bhoma Rhodes seeds @400/-per kg
+</div>
+    <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
         </div>
@@ -378,6 +438,3 @@ footer p i {
 
 </body>
 </html>
-
-
-
