--- a/index.html
+++ b/index.html
@@ -302,27 +302,27 @@ footer p i {
                 <img src="pu1.jfif">
                 <h4>Pure Calves</h4>
                 <div class="price-tag">KSh @25k–@67k • 4–7 months</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Pure%20Calves." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Pure%20Calves." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="rigisterd doper.jfif">
                 <h4>Registered Dorper</h4>
                 <div class="price-tag">KSh 6k–10k • 3–5 months</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Registered%20Dorper%20Lambs." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'm%20interested%20in%20Registered%20Dorper%20Lambs." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="second calving.jfif">
                 <h4>Second Calving (Incalf)</h4>
                 <div class="price-tag">KSh 165k–245k • 7.5 months incalf</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20details%20on%20the%20Second%20Calving%20Fresian%20Cow." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20details%20on%20the%20Second%20Calving%20Fresian%20Cow." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
                 <img src="every farmers dream goat.jfif">
                 <h4>Farmer’s Dream Goat</h4>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I%20want%20to%20inquire%20about%20the%20Farmer's%20Dream%20Goat." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I%20want%20to%20inquire%20about%20the%20Farmer's%20Dream%20Goat." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
@@ -332,7 +332,7 @@ footer p i {
 
 
                 <div class="price-tag">Ready to serve rams available 10k-50k</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
 
@@ -340,7 +340,7 @@ footer p i {
                 <img src="second calving freshian.jfif">
                 <h4>Second Calving</h4>
                 <div class="price-tag">Asking price ksh 165k-230k</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
               <div class="gallery-box">
@@ -353,7 +353,7 @@ footer p i {
 <br>- *Young Goats (8-11 months old):* KSh 15,000
 <br>- *Sub-adults (12 -16 months old):* KSh 30,000
 </div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
             <div class="gallery-box">
@@ -362,7 +362,7 @@ footer p i {
                 <img src="saanen goat 02.jfif">
                 <h4>SAANEN GOATS</h4>
                 <div class="price-tag">Available from 10k- 35k<br>3 litres to 5 litres per day</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
               <div class="gallery-box">
                 <img src="bora1.jfif">
@@ -374,24 +374,24 @@ footer p i {
                 <h4>BORAN ,SAHIWAL, BRAHMAN</h4>
                 <div class="price-tag">* Calves – From *KSH 25,000 to 35,000<br>
 * Heifers – From *KSH 60,000 to 96,000</div>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
               <div class="gallery-box">
                   <img src="kalhari goat.jfif">
                 <h4>Kalahari red goats</h4>
-                <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
               <div class="gallery-box">
 
                   <img src="shaaa.jfif">
-                <h4>Sahiwal cows</h4>      <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <h4>Sahiwal cows</h4>      <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 <div class="gallery-box">
 
                   <img src="jassey00.jfif">
-                <h4>Jersey</h4>      <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+                <h4>Jersey</h4>      <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
 <div class="gallery-box">
@@ -407,7 +407,7 @@ footer p i {
 
 <br>-Bhoma Rhodes seeds @400/-per kg
 </div>
-    <a href="https://wa.me/254735007665?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
+    <a href="https://wa.me/254762358824?text=Hello%20Delamere%20Farm,%20I'd%20like%20to%20buy%20a%20Registered%20Dorper%20Ram." target="_blank" class="buy-btn">Buy Now</a>
             </div>
 
         </div>
@@ -418,8 +418,8 @@ footer p i {
 <footer>
     <h2 style="font-size:26px;">Contact Us</h2>
 
-    <p><i class="bx bx-phone"></i><b>Phone:</b> 0735007665 / 0208355659</p>
-    <p><i class="bx bxl-whatsapp"></i><b>WhatsApp:</b> 0735007665</p>
+    <p><i class="bx bx-phone"></i><b>Phone:</b>  / 0208355659</p>
+    <p><i class="bx bxl-whatsapp"></i><b>WhatsApp:</b> 254762358824</p>
     <p><i class="bx bx-envelope"></i><b>Email:</b> delameredairyfarm1@gmail.com</p>
     <p><i class="bx bx-map"></i><b>Location:</b> Naivasha, Delamere Farm</p>
 
@@ -428,13 +428,14 @@ footer p i {
 </footer>
 
 <!-- FLOAT BUTTONS -->
-<a href="tel:0735007665" class="call-float">
+<a href="tel:0208355659" class="call-float">
     <i class="bx bx-phone-call"></i>
 </a>
 
-<a href="https://wa.me/254735007665" target="_blank" class="whatsapp-float">
+<a href="https://wa.me/254762358824" target="_blank" class="whatsapp-float">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
 
 </body>
 </html>
+
